// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.frontend.api.v1;

import "google/protobuf/timestamp.proto";
import "protos/frontend/api/v1/error_summary.proto";

option java_outer_classname = "ResultInfoProto";
option java_package = "com.google.aggregate.protos.frontend.api.v1";

/** Object for result data generated by the worker during processing. */
message ResultInfo {
  /** Return code for the aggregation job. */
  string return_code = 1;
  /** Return message for the aggregation job. */
  string return_message = 2;
  /** Summary of partial failures in aggregation. */
  ErrorSummary error_summary = 3;
  /** Timestamp of the aggregation request completion. */
  google.protobuf.Timestamp finished_at = 4;
}
