// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.shared.backend;

option java_outer_classname = "JobStatusProto";
option java_package = "com.google.aggregate.protos.shared.backend";

/** Indicates the current state of the job as it is processed. */
enum JobStatus {
  JOB_STATUS_UNKNOWN = 0;

  // Job has been received by aggregation service but aggregation hasn't started
  RECEIVED = 1;

  // Aggregation has started (or it started, failed, and will be retried)
  IN_PROGRESS = 2;

  // Job is finished and no further updates will be made
  FINISHED = 3;
}
